[package]
name = "rsdb"
version = "0.1.0"
authors = ["Justin Boswell <justin.boswell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
tui = { version = "0.15", default-features = false, features = ['termion'] }